p2/force-app/main/default/objects/Certifications__c/Certifications__c.object-meta.xml
<CustomObject>
    <label>Certification</label>
    <nameField>
        <displayFormat>CRT-{0000}</displayFormat>
        <label>Certifications Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Certifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>