p2/force-app/main/default/objects/Certifications__c/fields/Certification_Description__c.field-meta.xml
<CustomField>
    <fullName>Certification_Description__c</fullName>
    <label>Certification Description</label>
    <type>TextArea</type>
</CustomField>