p2/force-app/main/default/objects/Certifications__c/fields/Certification_Type__c.field-meta.xml
<CustomField>
    <fullName>Certification_Type__c</fullName>
    <label>Certification Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Certification_Type</valueSetName>
    </valueSet>
</CustomField>